# ocaml-zfs

./: README.md  dune-project  patch.sh  patches.md
example/: dune  main.ml
lib/: dune  zfs.ml  zfs.mli  zfs_stubs.c
lib/include/: discover.ml  dune
lib/include/sys/: dune
src/: dune  function_description.ml  type_description.ml  zfs.ml  zfs.mli  zfs_stubs.c
src/include/: discover.ml
test/: dune
