(rule
 (targets config.ml c_flags.sexp c_library_flags.sexp)
 (action
  (run ./include/discover.exe)))

(library
 (name zfs)
 (public_name zfs)
 (c_library_flags (:include c_library_flags.sexp))
 (foreign_stubs
  (language c)
  (flags :standard -D_GNU_SOURCE (:include c_flags.sexp))
  (names zfs_stubs)))


