(rule
 (targets config.ml c_flags.sexp c_library_flags.sexp)
 (action
  (run ./include/discover.exe)))

(library
 (name zfs)
 (public_name zfs)
 (c_library_flags
  (:include c_library_flags.sexp))
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name libzfs)
  (build_flags_resolver
   (vendored
    (c_flags
     :standard
     -D_GNU_SOURCE
     (:include c_flags.sexp))))
  (headers
   (include
    "unistd.h"
    "stdio.h"
    "stdint.h"
    "stdbool.h"
    "libzfs_core.h"
    "libzfs.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
